Got the Add Product Pop-up to work Need to add API to add product to database. Use a canvas element to read to local file to upload image

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@material-ui/core": "4.11.3",
     "@reduxjs/toolkit": "1.5.1",
     "@types/react-bootstrap": "0.32.25",
     "algolia": "0.0.0",
