--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "axios": "0.21.1",
     "bootstrap": "4.6.0",
     "cdbreact": "1.1.0",
+    "js-cookies": "1.0.4",
     "mdbreact": "5.0.2",
     "particles-bg": "2.5.5",
     "react": "17.0.2",
     "react-arc-text": "1.0.5",
     "react-bootstrap": "1.5.2",
+    "react-cookie": "4.0.3",
     "react-dom": "17.0.2",
+    "react-icons": "4.2.0",
     "react-redux": "7.2.3",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.0",
